# genlit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirement.txt
configs/: mit.yaml  multi.yaml  single.yaml
demo/: README.md  app.py  requirements.txt
examples/: README.md  multi.json  single.json
genlit/: config.py  inference.py  weights.py
genlit/data/: __init__.py  mit_test_set.py  multi_object.py  single_object.py
genlit/models/: __init__.py  controlnet_svd.py  unet_spatio_temporal_condition_controlnet.py
genlit/pipeline/: __init__.py  pipeline_stable_video_diffusion_controlnet.py
genlit/utils/: __init__.py  io.py
scripts/: run_mit.sh  run_multi.sh  run_single.sh
trajectories/: mit_test_set_small.npy  multi_object_25frames.npy  single_object_14frames.npy
