[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genlit"
version = "0.1.0"
description = "GenLit: Reformulating Single Image Relighting as Video Generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPI Tübingen / GenLit license (see LICENSE)" }
authors = [
    { name = "Shrisha Bharadwaj" },
]
dependencies = [
    "torch>=2.1",
    "torchvision",
    "diffusers>=0.27",
    "transformers>=4.36",
    "accelerate>=0.27",
    "huggingface_hub>=0.30,<1.0",
    "Pillow",
    "numpy",
    "PyYAML",
    "imageio",
    "imageio-ffmpeg",
]

[project.optional-dependencies]
demo = ["gradio>=4.0"]
dev = ["pytest>=7", "ruff"]

[project.scripts]
genlit-infer = "genlit.inference:main"

[tool.setuptools.packages.find]
include = ["genlit*"]
